--- a/index.html
+++ b/index.html
@@ -7,23 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Login Section -->
-    <div class="login-container" id="loginContainer">
-        <h2>Sign In</h2>
-        <form id="loginForm">
-            <input type="text" id="username" placeholder="Username" required>
-            <input type="email" id="email" placeholder="Email" required>
-            <input type="password" id="password" placeholder="Password" required>
-            <button type="submit">Sign In</button>
-        </form>
-    </div>
-
-    <!-- Pomodoro Main Section -->
     <div class="main-container" id="mainContainer" style="display:none;">
         <header>
             <h1>Pomodoro Timer</h1>
             <button id="settingsBtn" title="Settings">&#9881;</button>
+            <button id="logoutBtn" title="Logout" style="margin-left:10px;font-size:1.2rem;">&#x1F511;</button>
         </header>
+        <div class="welcome" id="welcome"></div>
         <div class="timer-section">
             <div class="circle-timer">
                 <svg width="220" height="220">
@@ -53,6 +43,10 @@
             </form>
         </div>
     </div>
+
+    <!-- Sound elements (hidden) -->
+    <audio id="startSound" src="https://cdn.pixabay.com/audio/2022/07/26/audio_124bfa3c7b.mp3"></audio>
+    <audio id="endSound" src="https://cdn.pixabay.com/audio/2022/07/26/audio_124bfa3c7b.mp3"></audio>
 
     <script src="script.js"></script>
 </body>
