added one more file

--- a/auth.html
+++ b/auth.html
@@ -77,8 +77,10 @@
             return;
         }
         sessionStorage.setItem('pomodoroUser', JSON.stringify(user));
-        window.location.href = 'index.html';
+        window.location.href = 'landing.html';
     };
 </script>
 </body>
 </html>
+
+
